@@ -12,7 +12,7 @@ from lib.params import get_sipremotecrack_args
 
 
 def main():
-    ip, rport, rexten, prefix, proto, domain, contact_domain, user_agent, wordlist, nthreads = get_sipremotecrack_args()
+    ip, rport, rexten, prefix, ext_len, proto, domain, contact_domain, user_agent, wordlist, nthreads = get_sipremotecrack_args()
 
     s = SipRemoteCrack()
     s.ip = ip
@@ -22,6 +22,7 @@ def main():
     s.contact_domain = contact_domain
     s.exten = rexten
     s.prefix = prefix
+    s.ext_len = ext_len
     s.user_agent = user_agent
     s.threads = nthreads
     s.wordlist = wordlist
