@@ -2,6 +2,7 @@ devel version
 - sipsend: added params from_tag, to_tag, branch, callid, cseq, sdp
 - sipinvite: added param --no-sdp to send the INVITE without SDP
 - sipenumerate: added verbose mode
+- siprcrack: added param lenght to force the size of extensions
 - siptshark: new module to extract info from a PCAP file
 - bug fixes
 
